[project]
name = "20260317-twins-data-eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "matplotlib-fontja>=1.1.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
