[project]
name = "20260317-twins-data-eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "matplotlib-fontja>=1.1.0",
    "numpy>=2.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "scikit-learn>=1.6",
    "seaborn>=0.13.2",
    "torch>=2.5",
    "tqdm>=4.66",
    "umap-learn>=0.5",
    "boto3>=1.35",
    "chronos-forecasting>=1.4",
    "xgboost>=2.1",
    "pyarrow>=23.0.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
